<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.DescriptionFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/price"
        android:textSize="22sp"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/inc"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inc"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="10dp"
        android:textSize="16sp" />




    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/add_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/circle_button_3"
        android:layout_marginBottom="80dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inc"
        android:layout_width="110dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/minus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/minus"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/circle_button"/>

        <TextView
            android:id="@+id/number"
            android:layout_width="30dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@+id/minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/_1"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@+id/number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/plus"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/circle_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>