<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.myskills.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_navigation_menu_to_descriptionFragment"
            app:destination="@id/descriptionFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.myskills.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.myskills.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/descriptionFragment"
        android:name="com.example.myskills.ui.menu.DescriptionFragment"
        android:label="Description"
        tools:layout="@layout/fragment_description" >
        <action
            android:id="@+id/action_descriptionFragment_to_navigation_menu"
            app:destination="@id/navigation_menu" />
    </fragment>
</navigation>