<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="165dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/image__"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/todo" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <TextView
                android:id="@+id/name_"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image__"
                android:text="@string/name"
                android:layout_marginStart="15dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                android:layout_marginTop="20sp"/>

            <TextView
                android:id="@+id/description_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@+id/name_"
                app:layout_constraintStart_toEndOf="@+id/image__"
                android:text="@string/description"
                android:layout_marginStart="15dp"
                android:textSize="14sp"
                android:layout_marginTop="15dp"
                android:textStyle="normal" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/priceitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/price"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="48dp"
            android:textSize="18sp"
            android:textColor="@color/purple_700"/>

        <TextView
            android:id="@+id/dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/priceitem"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/dollar"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="1dp"
            android:textSize="18sp"
            android:textColor="@color/purple_700"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="110dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/minus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/minus"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/circle_button"/>

            <TextView
                android:id="@+id/number"
                android:layout_width="30dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@+id/minus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/_1"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/plus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_button"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="#455A64"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/number"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.cardview.widget.CardView>